--- a/2-workshop-I-email-subscribe/index.html
+++ b/2-workshop-I-email-subscribe/index.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body></body>
+  <body >
+    <!-- JIT just  in time compilation -->
+    <div  class="bg-zinc-800	 flex justify-center items-center w-full h-screen" >
+      <div class="w-1/2 h-1/3 flex justify-center	items-center p-4 bg-stone-900	text-white rounded-xl	">
+    <div class="w-3/12 h-full">
+      <img
+        src="./images/image.jpg"
+        alt="picture"
+        class="object-bottom w-full h-full rounded-l-md">
+    </div>
+    <div class=" w-9/12 h-full flex justify-center items-center ">
+      <div class="p-10 flex flex-col gap-2 text-lg">
+      <h2 class="font-mono">Get diet and fitness tips in your inbox</h2>
+      <p class="font-mono">
+        eat better and exercise better.Sign up for the Diet&Fitness newsletter.
+      </p>
+      <div class="flex w-full gap-4 ">
+      <input type="text" name="Enter your email address" placeholder="Enter your email address" class="rounded-md w-full pl-2"></input>
+      <button type="submit" class=" rounded-md bg-emerald-600 p-2	">Subscribe</button>
+      </div>
+      </div>
+      </div>
+    </div>
+    </div>
+  </body>
 </html>
