--- a/3-workshop-II-image-gallery/index.html
+++ b/3-workshop-II-image-gallery/index.html
@@ -4,6 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script
+      src="https://kit.fontawesome.com/c725ddae90.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body class="bg-blue-200 py-10 px-7">
+    <div class="bg-white rounded-md p-32">
+      <div class="w-full p-10 flex justify-end gap-6">
+        <p class="hover:cursor-pointer">Vector</p>
+        <p class="hover:cursor-pointer">IIIustrations</p>
+        <p class="hover:cursor-pointer">Images</p>
+        <p class="hover:cursor-pointer">Icons</p>
+      </div>
+      <div class="p-10 flex justify-between">
+        <div>
+          <input type="text" placeholder="Search" /><i
+            class="fa-solid fa-magnifying-glass"
+          ></i>
+        </div>
+        <buttom class="bg-black text-white rounded-3xl px-10 py-6"
+          >Upload</buttom
+        >
+      </div>
+      <div class="grid grid-cols-3 gap-6">
+        <div class="">
+          <img src="./images/image1.jpg" alt="woman" />
+        </div>
+        <div>
+          <img src="./images/image2.jpg" alt="window" />
+        </div>
+        <div>
+          <img src="./images/image3.jpg" alt="roof" />
+        </div>
+        <div>
+          <img src="./images/image4.jpg" alt="painting" />
+        </div>
+        <div>
+          <img src="./images/image5.jpg" alt="building" />
+        </div>
+        <div>
+          <img src="./images/image6.jpg" alt="door" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
