--- a/4-workshop-III-product-modal/index.html
+++ b/4-workshop-III-product-modal/index.html
@@ -4,6 +4,68 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body></body>
+  <body class="px-80 py-80 bg-yellow-50 font-sans">
+    <div class="bg-white flex justify-start shadow-inner">
+      <div class="p-5 flex justify-center">
+        <div class="w-3/4 h-1/2">
+          <img
+            src="./images/headphone.png"
+            alt="headphone"
+            class="w-full h-full"
+          />
+        </div>
+      </div>
+      <!-- box-right -->
+      <div class="p-10 w-3/4">
+        <div>
+          <button type="button" class="bg-black text-white rounded-full p-1">
+            Free shipping
+          </button>
+        </div>
+        <div>
+          <p class="font-medium text-2xl">
+            Razer Kraken Kitty Edt Gaming Headset Quartz
+          </p>
+        </div>
+        <div class="pt-6">
+          <p class="line-through">$799</p>
+          <p class="font-semibold text-xl">$599</p>
+          <br />
+          <p class="text-sm font-thin text-gray-500 pb-2">
+            This offer is valid until April 3 as long as stock lasts!
+          </p>
+        </div>
+        <div>
+          <button type="button" class="bg-blue-600 w-full rounded-md p-2">
+            Add to cart
+          </button>
+        </div>
+        <div class="flex items-center pt-2 gap-2">
+          <div class="w-[8px] h-[8px]">
+            <img
+              src="https://www.clker.com/cliparts/c/7/U/N/A/T/green-dot-small.svg.med.png"
+              class="w-full h-full"
+            />
+          </div>
+          <p class="text-sm font-thin text-black">50+ pcs. in stock.</p>
+        </div>
+        <div class="flex justify-evenly p-6 gap-2">
+          <div
+            class="border-solid border-2 rounded-md border-gray-400 flex justify-center items-center"
+          >
+            <img src="./images/weight.png" alt="weight" class="w-1/4" />
+            <p class="text-md">Add to cart</p>
+          </div>
+          <div
+            class="border-solid border-2 rounded-md border-gray-400 flex justify-center items-center"
+          >
+            <img src="./images/heart.png" alt="heart" class="w-1/4" />
+            <p class="text-md">Add to wishlist</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
